# Utils

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
Conan/: ConanPackages.py  conanPackages.py  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.py  conaninfo.txt  graph_info.json
Project/: Utils.cpp  Utils.h  Utils.hpp  main.cpp
Tests/: UtilsFixture.cxx  UtilsFixture.hxx  main.cxx
